--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
