--- a/admin/public/manifest.json
+++ b/admin/public/manifest.json
@@ -6,7 +6,7 @@
   "background_color": "#f8f9fb",
   "theme_color": "#1976d2",
   "icons": [
-    { "src": "/logo-adaptu.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/logo-adaptu.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/logo.jpg", "sizes": "192x192", "type": "image/jpg" },
+    { "src": "/logo.jpg", "sizes": "512x512", "type": "image/jpg" }
   ]
 }
