--- a/rep/package.json
+++ b/rep/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@mui/material": "^5.18.0",
     "date-fns": "^3.6.0",
-    "firebase": "^10.12.0",
-    "notistack": "^3.0.1",
+    "firebase": "^10.14.1",
+    "notistack": "^3.0.2",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.30.1",
+    "recharts": "^3.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
